# dbc-rs

./: .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DBC_FORMAT_SPEC.md  DBC_SPECIFICATIONS.md  KERNEL_FEATURE_REMAINING.md  LICENSING.md  README.md  RELEASE_CHECKLIST.md  REMAINING_WORK.md  SECURITY.md  SECURITY_AUDIT.md  build.rs  dbc-rs-api-review.md  output.dbc  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: benchmark-compare.yml  ci.yml  dbc-cli.yml  dbc-rs.yml
dbc/: ARCHITECTURE.md  Cargo.toml  DBC_FORMAT_SPEC.md  DBC_SPECIFICATIONS.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SPECIFICATIONS.md  build.rs
dbc-cli/: Cargo.toml  LICENSING.md  README.md
dbc-cli/src/: commands.rs  main.rs  storage.rs
dbc/benches/: parse_bench.rs
dbc/examples/: create_dbc.rs  decode.rs  parse_no_std.rs  parse_std.rs  read_from_sources.rs
dbc/src/: alloc_compat.rs  bit_timing.rs  byte_order.rs  comment.rs  dbc.rs  environment_variable.rs  environment_variable_data.rs  extended_multiplexing.rs  kernel_mock.rs  lib.rs  message.rs  message_transmitter.rs  nodes.rs  parse_options.rs  parser.rs  receivers.rs  signal.rs  signal_group.rs  signal_type.rs  signal_type_attribute.rs  signal_type_attribute_definition.rs  signal_type_reference.rs  signal_type_value.rs  value_table.rs  version.rs
dbc/src/attributes/: attributes.rs  mod.rs
dbc/src/compat/: alloc.rs  kernel.rs  mod.rs  string.rs  vec.rs
dbc/src/dbc/: core.rs  dbc.rs  dbc_builder.rs  decode.rs  impls.rs  message_list.rs  messages.rs  mod.rs  parse.rs  serialize.rs  validate.rs  validation.rs  value_descriptions_list.rs  value_descriptions_map.rs
dbc/src/dbc/builder/: build.rs  core.rs  impls.rs  methods.rs  mod.rs
dbc/src/dbc/parse/: ba.rs  ba_def.rs  ba_def_def.rs  ba_def_sgtype.rs  ba_sgtype.rs  bo.rs  bo_tx_bu.rs  bs.rs  bu.rs  cm.rs  envvar_data.rs  ev.rs  ev_data.rs  mod.rs  ns.rs  parse_state.rs  sg_mul_val.rs  sgtype.rs  sgtype_val.rs  sig_group.rs  sig_type_ref.rs  sig_valtype.rs  unimplemented.rs  val.rs  val_table.rs  version.rs
dbc/src/error/: error.rs  helpers.rs  impls.rs  messages.rs  mod.rs  parse_error.rs
dbc/src/error/lang/: de.rs  en.rs  en_no_std.rs  en_std.rs  es.rs  fr.rs  ja.rs  mod.rs
dbc/src/extended_multiplexing/: core.rs  mod.rs  parse.rs
dbc/src/extended_multiplexing/builder/: mod.rs
dbc/src/message/: core.rs  impls.rs  message.rs  message_builder.rs  message_parse.rs  message_serialize.rs  message_validation.rs  mod.rs  parse.rs  serialize.rs  signal_list.rs  signals.rs  tests.rs  validate.rs
dbc/src/message/builder/: build.rs  mod.rs
dbc/src/nodes/: core.rs  mod.rs  nodes.rs  nodes_builder.rs  parse.rs  serialize.rs
dbc/src/nodes/builder/: impls.rs  mod.rs
dbc/src/parser/: core.rs  expect.rs  keyword.rs  mod.rs  numbers.rs  parse.rs  skip.rs  strings.rs  take.rs
dbc/src/receivers/: core.rs  mod.rs  parse.rs  receivers.rs  receivers_builder.rs  std.rs
dbc/src/receivers/builder/: mod.rs
dbc/src/signal/: core.rs  decode.rs  encode.rs  impls.rs  mod.rs  parse.rs  serialize.rs  signal.rs  signal_builder.rs  validate.rs
dbc/src/signal/builder/: impls.rs  mod.rs
dbc/src/signal_type/: mod.rs  parse.rs  signal_extended_value_type.rs  signal_type.rs  signal_type_def.rs  signal_type_reference.rs  signal_type_value.rs
dbc/src/value_descriptions/: core.rs  mod.rs  value_descriptions.rs  value_descriptions_builder.rs
dbc/src/value_descriptions/builder/: mod.rs
dbc/src/version/: core.rs  mod.rs  parse.rs  serialize.rs  version.rs  version_builder.rs
dbc/src/version/builder/: mod.rs
dbc/tests/: edge_cases.rs  integration_tests.rs  kernel_alloc_test.rs  medium_priority_tests.rs  missing_features_tests.rs  proptest_tests.rs  real_world_tests.rs  signal_type_tests.rs  signal_value_type_tests.rs  test_hyundai_debug.rs  test_nodes_break_point.rs  test_ns_parse.rs  test_rivian_format.rs  test_tabs.rs  test_tesla_bu_format.rs
dbc/tests/data/: attributes.dbc  bit_timing.dbc  bit_timing_with_values.dbc  comments.dbc  complete.dbc  environment_variables.dbc  message_transmitters.dbc  multiplexing_basic.dbc  multiplexing_extended.dbc  signal_groups.dbc  signal_type.dbc  value_table.dbc
examples/: create_dbc.rs  read_from_sources.rs
kernel-driver-example/: .gitignore  Cargo.toml  INTEGRATION_TESTING.md  KERNEL_API_SETUP.md  Makefile  README.md  kernel_module.c  setup-ti-kernel.sh  test-compilation.sh  test-integration.sh  test-runtime.sh
kernel-driver-example/src/: lib.rs
kernel-driver-example/yocto/: .vscode-settings.json.example  README.md  dbc-kernel-example.bb  dbc-kernel-example_%.bbappend
scripts/: verify-kernel-api.sh
src/: dbc.rs  fast_dbc.rs  lib.rs  message.rs  nodes.rs  signal.rs  version.rs
src/bit_timing/builder/: impls.rs
src/compat/: btree_map.rs  mod.rs  string.rs  vec.rs
src/dbc/: ext_mux_index.rs  impls.rs  messages.rs  mod.rs  parse.rs  std.rs  validate.rs
src/dbc/builder/: build.rs  impls.rs  mod.rs
src/error/: impls.rs  mod.rs
src/error/lang/: de.rs  en.rs  en_no_std.rs  ja.rs  mod.rs
src/extended_multiplexing/builder/: mod.rs
src/message/: decode.rs  impls.rs
src/message/builder/: build.rs  impls.rs  mod.rs
src/nodes/: mod.rs
src/nodes/builder/: build.rs  mod.rs
src/parser/: take.rs
src/receivers/builder/: mod.rs
src/signal/: decode.rs  impls.rs  mod.rs
src/signal/builder/: build.rs  mod.rs
src/value_descriptions/builder/: mod.rs
tests/: integration_tests.rs
tests/data/: complete.dbc
