[workspace]
members = ["dbc", "dbc-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["dbc-rs contributors"]
repository = "https://github.com/reneherrero/dbc-rs"
homepage = "https://github.com/reneherrero/dbc-rs"
rust-version = "1.85.0"
