[package]
name = "dbc-cli"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for DBC file manipulation"
authors.workspace = true

[[bin]]
name = "dbc-cli"
path = "src/main.rs"

[dependencies]
dbc-rs = { path = "../dbc", package = "dbc-rs" }
clap = { version = "4.5", features = ["derive"] }
