[package]
name = "dbc-cli"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "Command-line interface for Database CAN (DBC) file manipulation"
keywords = ["can", "dbc", "automotive"]
categories = ["parsing", "embedded"]

[[bin]]
name = "dbc"
path = "src/main.rs"

[dependencies]
dbc-rs = { path = "../dbc", package = "dbc-rs" }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
