[package]
name = "dbc-rs"
readme = "README.md"
description = "Database CAN (DBC) parsing and editing library"
documentation = "https://docs.rs/dbc-rs"
keywords = ["can", "dbc", "automotive", "no_std"]
categories = ["parsing", "embedded"]
exclude = [".github/", "examples/", "tests/"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["alloc", "std"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]
# EXPERIMENTAL: Kernel feature for Linux kernel module compatibility
# This feature is experimental and subject to change. Mutually exclusive with alloc and std.
kernel = []

# Feature conflicts: kernel is mutually exclusive with alloc and std
[package.metadata.cargo-features]
# This is a workaround - Cargo doesn't support feature conflicts natively
# We'll handle this in build.rs or via conditional compilation

[[example]]
name = "create_dbc"
path = "examples/create_dbc.rs"
required-features = ["std"]

[[example]]
name = "parse_std"
path = "examples/parse_std.rs"
required-features = ["std"]

[[example]]
name = "parse_no_std"
path = "examples/parse_no_std.rs"
required-features = []

[dev-dependencies]
proptest = { version = "1.5", default-features = false, features = ["std"] }
criterion = { version = "0.5", default-features = false }
mockalloc = "0.1.2"

[[bench]]
name = "parse_bench"
harness = false
required-features = ["alloc"]
