[package]
name = "dbc-rs"
readme = "README.md"
description = "Database CAN (DBC) parsing and editing library"
documentation = "https://docs.rs/dbc-rs"
keywords = ["can", "dbc", "automotive", "no_std"]
categories = ["parsing", "embedded"]
exclude = [".github/", "examples/", "tests/"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]

[dependencies.heapless]
version = "0.9.2" # or latest compatible version
optional = true

[dependencies.embedded-can]
version = "0.4.1" # or latest compatible version
optional = true

[package.metadata.docs.rs]
features = ["std"]

[features]
default = ["std"]
# Optional: enable when you have a global allocator (Cortex-A, Linux, etc.)
alloc = []
# Optional: enable when you want the bounded versions
heapless = ["dep:heapless"]
# Default: enable when you want all the std features (Builders, etc.)
std = ["alloc"]
# Optional: enable when you want to use the embedded-can crate for CAN message decoding
embedded-can = ["dep:embedded-can"]

[[example]]
name = "create_dbc"
path = "examples/create_dbc.rs"
required-features = ["std"]

[[example]]
name = "parse_std"
path = "examples/parse_std.rs"
required-features = ["std"]

[[example]]
name = "parse_no_std"
path = "examples/parse_no_std.rs"
required-features = ["alloc"]

[[example]]
name = "decode"
path = "examples/decode.rs"
required-features = ["std"]

[[example]]
name = "decode_frame"
path = "examples/decode_frame.rs"
required-features = ["std", "embedded-can"]

[dev-dependencies]
proptest = { version = "1.9.0", default-features = false, features = ["std"] }
criterion = { version = "0.8.1", default-features = false }

[[bench]]
name = "parse_bench"
harness = false
required-features = ["std"]
