# Exclude from parent workspace
[workspace]

[package]
name = "dbc-kernel-example"
version = "0.1.0"
edition = "2024"
authors = ["dbc-rs contributors"]

[lib]
crate-type = ["rlib"]

[dependencies]
dbc-rs = { path = "../dbc", default-features = false, features = ["kernel"] }

# ============================================================================
# TI Kernel Setup for Testing
# ============================================================================
#
# To test against the TI kernel, follow these steps:
#
# 1. Set up TI kernel source (from repository root):
#    ./setup-ti-kernel.sh
#
#    This will:
#    - Clone TI kernel as a git submodule at ti-linux-kernel/
#    - Checkout the appropriate branch (ti-linux-6.12.y by default)
#    - Verify Rust support configuration
#
# 2. Configure kernel with Rust support:
#    cd ti-linux-kernel
#    make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- defconfig
#    echo "CONFIG_RUST=y" >> .config
#    make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- olddefconfig
#
# 3. Prepare kernel (generates rust/Cargo.toml and bindings):
#    make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- prepare
#
# 4. Uncomment the kernel dependency below (REQUIRED - this is always a kernel driver):
#    - Path points to ../ti-linux-kernel/rust (relative to this directory)
#    - Update the path if your kernel source is in a different location
#
# 5. Test compilation:
#    cd kernel-driver-example
#    cargo check
#
# ============================================================================

[dependencies.kernel]
path = "../ti-linux-kernel/rust" # Update this if kernel source is elsewhere

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
