# Exclude from parent workspace
[workspace]

[package]
name = "dbc-kernel-example"
version = "0.1.0"
edition = "2024"
authors = ["dbc-rs contributors"]

[lib]
crate-type = ["rlib"]

[dependencies]
dbc-rs = { path = "../dbc", default-features = false, features = ["kernel"] }

# ============================================================================
# IMPORTANT: Kernel Modules are Built via Makefile, NOT Cargo
# ============================================================================
#
# Linux kernel modules (including Rust modules) are built through the kernel's
# Makefile system, not through Cargo. The kernel does NOT generate a Cargo.toml
# file for external modules to use as a dependency.
#
# To build this kernel module:
#   1. Use the Makefile: `make KDIR=/path/to/kernel`
#   2. Do NOT use `cargo check` or `cargo build` - they won't work
#
# The kernel dependency below is commented out because:
# - The kernel doesn't expose itself as a Cargo crate
# - Kernel modules must be built through the kernel build system
# - The Makefile handles kernel integration automatically
#
# See README.md for complete build instructions.
# ============================================================================

# NOTE: This dependency is NOT used for kernel module builds.
# Kernel modules are built via Makefile, which integrates with the kernel
# build system directly. This is only here for reference/documentation.
# [dependencies.kernel]
# path = "../ti-linux-kernel/rust" # This path doesn't contain Cargo.toml

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
